kubernetes/ingress-old.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: "test"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: flask
          servicePort: 5000
