kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: flashcards
spec:
  backend:
    serviceName: flask
    servicePort: 5000
